--- a/src/styles/todolist.scss
+++ b/src/styles/todolist.scss
@@ -5,6 +5,7 @@
   transform: translate(50%, 0%);
   text-align: center;
   width: 90%;
+  min-width: 330px;
   max-width: 400px;
   margin: 0 auto;
   &__tasklist__wrapper {
